fix: align menu

--- a/src/components/left-menu/left-menu.scss
+++ b/src/components/left-menu/left-menu.scss
@@ -1,5 +1,6 @@
 .left-menu__wrapper{
   color: white;
+  margin-left:20%
 }
 .left-menu__logo {
   margin:20px; 
@@ -22,7 +23,6 @@
 }
 
 .left-menu__href {
-  margin-left: 15px;
   color: #a5b1d5;;
   text-decoration: none;
 }
